Fix review comments and also add some more content